<resources>
    <string name="app_name">MedRex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_sync">Sync</string>

    <string name="txt_medication">Medications</string>
    <string name="txt_medicine">Medicine</string>
    <string name="txt_prescription">Prescriptions</string>
    <string name="txt_hCondition">Health Conditions</string>
    <string name="txt_hCenter">Health Centers</string>
    <string name="txt_doctor">Doctors</string>
    <string name="txt_profile">My Profile</string>
    <string name="txt_leftover">Leftover Medications</string>
    <string name="txt_refill">Medicine Refills</string>
    <string name="txt_emergency">Emergency</string>
    <string name="txt_rate">Rate</string>
    <string name="txt_share">Share</string>
    <string name="txt_about">About</string>
    <string name="txt_feedback">Feedback</string>
    <string name="txt_schedule">Schedule</string>
    <string name="intro_text">Take your Medications on Time</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>